--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.21"
     implementation fileTree(dir: 'libs', include:['*.jar'])
+    implementation("com.android.volley:volley:1.2.0")
+    //implementation "org.jetbrains.anko:anko-commons:$anko_version"
     //testImplementation 'junit:junit:4.13.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
