--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    //kotlin("kapt") version "1.5.30"
     id 'com.google.gms.google-services'
 }
 
@@ -43,8 +44,10 @@ dependencies {
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:28.3.1')
     implementation("androidx.multidex:multidex:2.0.1")
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     // Add the dependency for the Firebase SDK for Google Analytics
     // When using the BoM, don't specify versions in Firebase dependencies
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database:20.0.1'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
@@ -73,8 +76,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.21"
-    implementation fileTree(dir: 'libs', include:['*.jar'])
     implementation("com.android.volley:volley:1.2.0")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    testImplementation 'junit:junit:4.12'
     //implementation "org.jetbrains.anko:anko-commons:$anko_version"
     //testImplementation 'junit:junit:4.13.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
