--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
             multiDexKeepFile = file('multidex-config.txt')
         }
         release {
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -44,6 +45,7 @@ dependencies {
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:28.3.1')
     implementation("androidx.multidex:multidex:2.0.1")
+    implementation 'com.google.firebase:firebase-dynamic-module-support:16.0.0-beta01'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     // Add the dependency for the Firebase SDK for Google Analytics
     // When using the BoM, don't specify versions in Firebase dependencies
@@ -54,6 +56,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     //Add the following line:
     //Google Services plugin
     apply plugin: 'com.google.gms.google-services'
