--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.DetailApplication.NoActionBar"></activity>
         <activity
-            android:name=".ItemDetailHostActivity"
+            android:name=".activity.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
