--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.detailapplication">
     <!-- -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 
     <application
         android:allowBackup="true"
@@ -13,12 +14,22 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.DetailApplication">
         <activity
+            android:name=".RecyclerActivity"
+            android:label="@string/title_recycler_activity">
+
+        </activity>
+        <activity
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.DetailApplication.NoActionBar"></activity>
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
