Make phone call

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.detailapplication">
     <!-- -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SEND_SMS"/>
 
     <application
@@ -20,6 +21,11 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.DetailApplication.NoActionBar">
+        </activity>
+        <activity
+            android:name=".PhoneActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.DetailApplication.NoActionBar">
         </activity>
