--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.DetailApplication">
         <activity
-            android:name=".RecyclerActivity"
+            android:name=".activity.RecyclerActivity"
             android:label="@string/title_recycler_activity">
 
         </activity>
@@ -25,7 +25,7 @@
             android:theme="@style/Theme.DetailApplication.NoActionBar">
         </activity>
         <activity
-            android:name=".PhoneActivity"
+            android:name=".activity.PhoneActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.DetailApplication.NoActionBar">
         </activity>
