--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,17 +46,17 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.3.1')
     implementation("androidx.multidex:multidex:2.0.1")
     implementation 'com.google.firebase:firebase-dynamic-module-support:16.0.0-beta01'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     // Add the dependency for the Firebase SDK for Google Analytics
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-database:20.0.1'
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
+    implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.google.firebase:firebase-messaging-ktx:22.0.0'
     //Add the following line:
     //Google Services plugin
@@ -67,23 +67,26 @@ dependencies {
     //For example, declare the dependencies fpr Firebase Authentication and Cloud Firestore
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-core:19.0.1'
+
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
     // Add the dependencies for any other desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
 
-    implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.21"
-    implementation("com.android.volley:volley:1.2.0")
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.30"
+    implementation("com.android.volley:volley:1.2.1")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     //implementation "org.jetbrains.anko:anko-commons:$anko_version"
     //testImplementation 'junit:junit:4.13.12'
     //apt 'com.jakewharton:butterknife-compiler:8.0.1'
