--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             android:name=".activity.RecyclerActivity"
             android:label="@string/title_recycler_activity">
         </activity>
+        <activity android:name=".NewWordActivity"></activity>
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main"
