--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    //kotlin("kapt") version "1.5.30"
+    //apply plugin: 'kotlin-kapt'
     id 'com.google.gms.google-services'
 }
 
@@ -27,6 +27,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -42,6 +46,7 @@ android {
 }
 
 dependencies {
+    apply plugin: 'kotlin-kapt'
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:28.3.1')
     implementation("androidx.multidex:multidex:2.0.1")
