--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ android {
 
 dependencies {
     apply plugin: 'kotlin-kapt'
+    implementation 'android.arch.persistence.room:runtime:1.0.0-alpha1'
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:28.3.1')
     implementation("androidx.multidex:multidex:2.0.1")
