--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DetailApplication">
         <activity
+            android:name=".activity.RegisterActivity"
+            android:exported="true" />
+        <activity
             android:name=".activity.LoginActivity"
             android:exported="true" />
         <!--
@@ -26,21 +29,21 @@
         -->
         <activity
             android:name=".activity.RecyclerActivity"
-            android:label="@string/title_recycler_activity"></activity>
+            android:label="@string/title_recycler_activity" />
         <activity
             android:name=".activity.NewWordActivity"
-            android:label="@string/title_new_word_activity"></activity>
+            android:label="@string/title_new_word_activity" />
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.DetailApplication.NoActionBar"></activity>
+            android:theme="@style/Theme.DetailApplication.NoActionBar" />
         <activity
             android:name=".activity.PhoneActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.DetailApplication.NoActionBar"></activity>
+            android:theme="@style/Theme.DetailApplication.NoActionBar" />
         <activity
             android:name=".activity.ImamMainActivity"
-            android:label="@string/title_imam_main_activity"></activity>
+            android:label="@string/title_imam_main_activity" />
         <activity
             android:name=".activity.HomeActivity"
             android:label="@string/app_name">
