--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,12 @@
         <activity
             android:name=".activity.LoginActivity"
             android:exported="true" />
-        <!--
-        <service android:name=".MyFirebaseInstanceIDService">
+        <service android:name=".service.MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        -->
+
         <activity
             android:name=".activity.RecyclerActivity"
             android:label="@string/title_recycler_activity" />
