Fixed hardcoded strings
For the imam!

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,14 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Aug 06 07:09:35 GST 2021
+#Fri Dec 10 07:41:34 PST 2021
 sdk.dir=C\:\\Users\\15039\\AppData\\Local\\Android\\Sdk
+package=com.android.systemui.classifier;
+import=android.view.MotionEvent;
+public=abstract String getTag();
+protected=ClassifierData mClassifierData;
+*/=
+*=Informs the classifier that a sensor change occurred
+/*=
+}=
+/**=
