--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,11 +66,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
-    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    //implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.0'
     implementation 'androidx.room:room-common:2.3.0'
     implementation 'androidx.room:room-runtime:2.3.0'
+
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     //Add the following line:
     //Google Services plugin
@@ -79,7 +80,10 @@ dependencies {
     apply plugin: 'kotlin-android-extensions'
     //Declare the dependencies for any other desired Firebase products
     //For example, declare the dependencies fpr Firebase Authentication and Cloud Firestore
+    //implementation platform('com.google.firebase:firebase-bom:29.0.3')
+
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-core:20.0.0'
 
