--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    //implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
     implementation("com.android.volley:volley:1.2.1")
     testImplementation 'junit:junit:4.13.2'
