--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
     defaultConfig {
         applicationId "com.example.detailapplication"
         minSdkVersion 19
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         multiDexEnabled = true
@@ -63,16 +63,16 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database:20.0.3'
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
     //implementation 'com.google.firebase:firebase-storage:20.0.0'
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.android.gms:play-services-auth:20.0.0'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.0'
-    implementation 'androidx.room:room-common:2.3.0'
-    implementation 'androidx.room:room-runtime:2.3.0'
+    implementation 'androidx.room:room-common:2.4.0'
+    implementation 'androidx.room:room-runtime:2.4.0'
 
-    annotationProcessor 'androidx.room:room-compiler:2.3.0'
+    annotationProcessor 'androidx.room:room-compiler:2.4.0'
     //Add the following line:
     //Google Services plugin
     apply plugin: 'com.google.gms.google-services'
@@ -85,7 +85,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-firestore'
-    implementation 'com.google.firebase:firebase-core:20.0.0'
+    implementation 'com.google.firebase:firebase-core:20.0.2'
 
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
     // Add the dependencies for any other desired Firebase products
@@ -102,8 +102,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    //implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.31"
+    implementation  'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.0"
     implementation("com.android.volley:volley:1.2.1")
     testImplementation 'junit:junit:4.13.2'
     //implementation "org.jetbrains.anko:anko-commons:$anko_version"
@@ -111,4 +111,10 @@ dependencies {
     //apt 'com.jakewharton:butterknife-compiler:8.0.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+}
+
+configurations.all {
+    resolutionStrategy.dependencySubstitution {
+        substitute module('org.hamcrest:hamcrest-core:1.1') with module('junit:junit:4.10')
+    }
 }
