--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,11 @@ dependencies {
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
+    // FirebaseUI for Cloud Storage
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.0'
+    // FirebaseUI for Firebase Realtime Database
+    implementation 'com.firebaseui:firebase-ui-database:8.0.0'
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database:20.0.3'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
@@ -81,10 +86,12 @@ dependencies {
     //Declare the dependencies for any other desired Firebase products
     //For example, declare the dependencies fpr Firebase Authentication and Cloud Firestore
     //implementation platform('com.google.firebase:firebase-bom:29.0.3')
-
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
     implementation 'com.google.firebase:firebase-core:20.0.2'
 
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
@@ -95,6 +102,11 @@ dependencies {
     implementation("androidx.recyclerview:recyclerview:1.2.1")
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'com.google.firebase:firebase-firestore:24.0.0'
+    implementation 'com.firebaseui:firebase-ui:0.6.2'
+    //implementation 'com.firebaseui:firebase-ui-firestore:4.2.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    //implementation 'com.firebaseui:firebase-ui-firestore:4.2.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
@@ -112,6 +124,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+apply plugin: 'com.google.gms.google-services'
 
 configurations.all {
     resolutionStrategy.dependencySubstitution {
