--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     //For example, declare the dependencies fpr Firebase Authentication and Cloud Firestore
     //implementation platform('com.google.firebase:firebase-bom:29.0.3')
     // FirebaseUI for Cloud Firestore
+    implementation 'com.google.firebase:firebase-inappmessaging-display'
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-storage'
