--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ android {
 
 dependencies {
     apply plugin: 'kotlin-kapt'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'io.getstream:stream-chat-android-client:4.26.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
@@ -57,10 +59,11 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.4.1')
     implementation("androidx.multidex:multidex:2.0.1")
     implementation 'com.google.firebase:firebase-dynamic-module-support:16.0.0-beta01'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     // Add the dependency for the Firebase SDK for Google Analytics
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'commons-io:commons-io:2.4'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
     // FirebaseUI for Cloud Storage
@@ -103,7 +106,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation("androidx.recyclerview:recyclerview:1.2.1")
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.firebase:firebase-firestore:24.0.0'
     implementation 'com.firebaseui:firebase-ui:0.6.2'
     //implementation 'com.firebaseui:firebase-ui-firestore:4.2.0'
@@ -117,7 +120,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation  'com.googlecode.json-simple:json-simple:1.1.1'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.0"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.10"
     implementation("com.android.volley:volley:1.2.1")
     testImplementation 'junit:junit:4.13.2'
     //implementation "org.jetbrains.anko:anko-commons:$anko_version"
