--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
             android:name=".activity.RegisterActivity"
             android:exported="true" />
         <activity
+            android:name=".activity.ChatBotActivity"
+            android:exported="true" />
+        <activity
             android:name=".activity.LoginActivity"
             android:exported="true" />
 
