--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 
 dependencies {
     apply plugin: 'kotlin-kapt'
+    implementation 'me.himanshusoni.chatmessageview:chat-message-view:1.0.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'io.getstream:stream-chat-android-client:4.26.0'
@@ -98,7 +99,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
     implementation 'com.google.firebase:firebase-core:20.0.2'
-
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
     // Add the dependencies for any other desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
