--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,11 @@
             android:label="@string/title_chat_activity" />
 
         <activity
+            android:name=".SimpleChatActivity"
+            android:exported="true"
+            android:label="@string/title_simple_chat_activity" />
+
+        <activity
             android:name=".activity.RecyclerActivity"
             android:exported="true"
             android:label="@string/title_recycler_activity" />
