--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,15 @@ android {
 
 dependencies {
     apply plugin: 'kotlin-kapt'
-    implementation 'me.himanshusoni.chatmessageview:chat-message-view:1.0.3'
+    //implementation "org.alicebot.*"
+    implementation 'com.google.android.material:material:1.4.0'
+    //implementation 'me.himanshusoni.chatmessageview:chat-message-view:1.0.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'io.getstream:stream-chat-android-client:4.26.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'androidx.room:room-runtime:2.4.0'
+    annotationProcessor 'androidx.room:room-compiler:2.4.0'
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     // Import the Firebase BoM
@@ -64,7 +66,7 @@ dependencies {
     // Add the dependency for the Firebase SDK for Google Analytics
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'commons-io:commons-io:2.4'
+    implementation 'commons-io:commons-io:2.6'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
     // FirebaseUI for Cloud Storage
