--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'commons-io:commons-io:2.6'
+    implementation files('libs/Ab.jar')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
     // FirebaseUI for Cloud Storage
@@ -89,6 +90,8 @@ dependencies {
     //Google Services plugin
     apply plugin: 'com.google.gms.google-services'
     apply plugin: 'kotlin-kapt'
+    //implementation 'com.android.support:design:28.0.0'
+    //implementation 'com.android.support:cardview-v7:28.0.0'
     apply plugin: 'kotlin-android-extensions'
     //Declare the dependencies for any other desired Firebase products
     //For example, declare the dependencies fpr Firebase Authentication and Cloud Firestore
